# 3DLiveScanner

./: .gitignore  README.md
arcore/: Android.mk
arcore/include/: arcore_c_api.h
arengine/: Android.mk
arengine/include/: huawei_arengine_interface.h
common/arcore/: arcore.cc  arcore.h  arengine.cc  arengine.h  camera.cc  camera.h  platform.h  service.cc  service.h
common/data/: dataset.cc  dataset.h  depthmap.cc  depthmap.h  file3d.cc  file3d.h  image.cc  image.h  mesh.cc  mesh.h
common/editor/: effector.cc  effector.h  rasterizer.cc  rasterizer.h  selector.cc  selector.h
common/exporter/: csvposes.cc  csvposes.h  depthmaps.cc  depthmaps.h  exporter.cc  exporter.h  floorpln.cc  floorpln.h  ply.cc  ply.h
common/gl/: camera.cc  camera.h  glsl.cc  glsl.h  opengl.h  renderer.cc  renderer.h  scene.cc  scene.h
common/postproc/: optimizer.cc  optimizer.h  poisson.cc  poisson.h  texturize.cc  texturize.h
common/tango/: heightmap.cc  heightmap.h  retango.cc  retango.h  scan.cc  scan.h  texturize.cc  texturize.h
common/thread/: reconstr.cc  reconstr.h  scene.cc  scene.h
dataset_extractor/: CMakeLists.txt  app.cpp
dataset_viewer/: CMakeLists.txt  app.cpp
night_vision/app/: build.gradle
night_vision/app/src/main/: AndroidManifest.xml
night_vision/gradle/wrapper/: gradle-wrapper.properties
scanner/: build.gradle  gradle.properties  local.properties  proguard-rules.pro  scanner.xcf  translations.sh
scanner/app/: build.gradle
scanner/app/src/main/: AndroidManifest.xml
scanner/gradle/wrapper/: gradle-wrapper.properties
(+85 files in other folders)
